--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,12 +1,20 @@
 <form action="/auth/signup" method="POST">
-  <label for="new-email">Email</label>
+
+  <label for="new-email">Email:</label>
   <input id="new-email" type="email" name="email">
-
-  <label for="new-name">Name</label>
+</br>
+</br>
+  <label for="new-name">Name:</label>
   <input id="new-name" type="text" name="name">
-
-  <label for="new-password">Password</label>
+</br>
+</br>
+  <label for="new-license">License:</label>
+  <input id="new-license" type="text" name="license">
+</br>
+</br>
+  <label for="new-password">Password:</label>
   <input id="new-password" type="password" name="password">
-
+</br>
+</br>
   <input type="submit" value="Sign up">
 </form>
