--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,9 @@
-<h2>Profile Page</h2>
+<h2>Profile</h2>
 
-<h3>Welcome to your PROFILE</h3>
+<h5>Welcome to your profile <%= name %></h5>
+
 
 <p>Id: <%= id %></p>
 <p>Name: <%= name %></p>
 <p>Email: <%= email %></p>
+<p>License: <%= license %></p>
