--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,3 +2,12 @@
 
 <img src="assets/APARTMENT.jpg">
 
+<hr>
+
+<h4>Address: 4444 Town Street, Austin Texas 77009</h3>
+<h4>Phone: 6666777123</h3>
+<h4>Email: goldenApartment@gmail.com</h4>
+
+<footer>
+    @golden Apartment
+</footer>
