--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,4 @@
-<form action="/auth/signup" method="POST">
+<form action="/auth/signup" method="POST" enctype="multipart/form-data">
 
   <label for="new-email">Email:</label>
   <input id="new-email" type="email" name="email">
@@ -15,6 +15,11 @@
   <label for="new-password">Password:</label>
   <input id="new-password" type="password" name="password">
 </br>
+</br>
+
+<label for="inputFile">Image</label>
+<input type="file" name="inputFile">
+
 </br>
   <input type="submit" value="Sign up">
 </form>
