mvp-stage-complete

--- a/views/apartments/index.ejs
+++ b/views/apartments/index.ejs
@@ -1,8 +1,8 @@
-<h1>List of Residents</h1>
+<h1>Apartment Page</h1>
 <nav>
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/profile/apartments/new">Create a new Resident</a></li>
+    <!-- <li><a href="./profile/apartments/new">Create a new Resident</a></li> -->
   </ul>
 </nav>
 </header>
