--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,4 @@
-<form action="/auth/signup" method="POST" enctype="multipart/form-data">
+<form action="/auth/signup" method="POST">
 
   <label for="new-email">Email:</label>
   <input id="new-email" type="email" name="email">
@@ -17,8 +17,6 @@
 </br>
 </br>
 
-<label for="inputFile">Image</label>
-<input type="file" name="inputFile">
 
 </br>
   <input type="submit" value="Sign up">
