styling in progress

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,19 @@
-<h2>Homepage</h2>
+<h2 class='greetingh'>Welcome to Golden Apartment</h2>
 
-<img src="assets/APARTMENT.jpg">
+<img class='hppicture' src="assets/APARTMENT.jpg">
 
-<hr>
-
+<div class='infop'>
 <h4>Address: 4444 Town Street, Austin Texas 77009</h3>
 <h4>Phone: 6666777123</h3>
 <h4>Email: goldenApartment@gmail.com</h4>
+</div>
 
-<footer>
+<form action ='/review' method ="POST" >
+    <label for="content">Review</label><br>
+     <input type="content" name="content"><br>
+     <input type="submit" value="Submit">
+  </form>
+
+<div class='footer'>
     @golden Apartment
-</footer>
+</div>
