styling in progress

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,5 +1,12 @@
-<form action="/auth/login" method="POST">
 
+<div class='lp'>
+<h3>Login Here Please...</h3>
+</div>
+
+<div class='loginform'>
+<form action="/auth/login" method="POST">
+  <br>
+  <br>
   <label for="auth-email">Email</label>
   <input id="auth-email" type="email" name="email">
 </br>
@@ -10,3 +17,4 @@
 </br>
   <input type="submit" value="Log In">
 </form>
+</div>
