--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,5 +1,11 @@
-<form action="/auth/signup" method="POST">
+<div class='sp'>
+<h2>SignUp Here Please...</h2>
+</div>
 
+<div class="signup">
+<form action="/auth/signup" method="POST">
+<br>
+<br>
   <label for="new-email">Email:</label>
   <input id="new-email" type="email" name="email">
 </br>
@@ -21,3 +27,4 @@
 </br>
   <input type="submit" value="Sign up">
 </form>
+</div>
