--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,32 @@
 <h2 class='greetingh'>Welcome to Golden Apartment</h2>
-
+<div class='pinfo'>
 <img class='hppicture' src="assets/APARTMENT.jpg">
 
 <div class='infop'>
-<h4>Address: 4444 Town Street, Austin Texas 77009</h3>
-<h4>Phone: 6666777123</h3>
-<h4>Email: goldenApartment@gmail.com</h4>
+<p><b>Address:</b> 4444 Town Street, Austin Texas 77009</p>
+<p><b>Phone:</b> 6666777123</p>
+<p><b>Email:</b> goldenApartment@gmail.com</p>
+</div>
 </div>
 
-<form action ='/review' method ="POST" >
-    <label for="content">Review</label><br>
-     <input type="content" name="content"><br>
-     <input type="submit" value="Submit">
-  </form>
+<div class='descR'>
 
+<p><b>GENERAL DESCRIPTION</b><br>Golden Apartment is a Austin apartment complex
+    with a variety of available floor plans <br>and amenities.
+    It is located at 4444 Town street in Austin Texas, and
+    rental rates range<br> from $590 to $1025 per month. Discover schools near Town
+    street en Bissonet.
+</p>
+<div class='pform'>
+<form action ='/review' method ="POST" >
+    <label for="content"><b>Review</b></label><br>
+    <input id='content'type="content" name="content"><br>
+    
+    <br>
+    <input type="submit" value="Submit">
+</form>
+</div>
+</div>
 <div class='footer'>
     @golden Apartment
 </div>
