--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,4 @@
+<div class='profilepage'>
 <h2>Profile Page</h2>
 
 <h5>Welcome to your profile <%= name %></h5>
@@ -42,3 +43,4 @@
    
     <input type="submit">
 </form>
+</div>
