--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,13 @@ nav ul li {
   display: inline-block;
   margin-right: .3em;
 }
+nav{
+  display:flex;
+  flex-direction: row;
+ justify-content: flex-end;
+ padding-right: 30px;
 
+}
 h1 {
   color: chartreuse;
 }
@@ -17,27 +23,67 @@ h1 {
   width: 600px;
   height: 350px;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .footer{
 
   margin-left: 700px;
-    margin-top: 250px;
+    margin-top: 80px;
 }
 
-.infop{
+.pinfo{
   display: flex;
   flex-direction: row;
   align-items: right;
+ }
 
-  /* margin-left: auto;
-  order: 2;
-   display:flex; */
-   /* justify-content: flex-end; */
-    /* flex-direction: column; */
-    /* align-items: center; */
+ .descR{
+  display: flex;
+  flex-direction: row;
+  align-items: right;
+ }
+ .infop{
+   margin-top:120px;
+   margin-left: 100px;
  }
 
  .greetingh{
   text-align: center;
+ }
+
+ .pform{
+  margin-top:10px;
+  margin-left: 50px;
+ }
+
+ .profilepage{
+  margin-left: 50px;
+ }
+
+ .loginform{
+  text-align: center;
+  background-color: blueviolet;
+ }
+ .lp{
+  margin-top: 150px;
+  text-align: center;
+ }
+ .signup{
+  text-align: center;
+   background-color: blueviolet;
+ }
+
+ .sp{
+  margin-top: 150px;
+  text-align: center;
+ }
+
+ #content{
+  width: 600px;
+  height: 100px;
+ }
+
+ body{
+   background-color: chartreuse;
  }
